<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:inputType="phone"
                android:id="@+id/phone"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect"
                android:hint="@string/phone"
                android:textSize="24sp"
                android:padding="8dp"/>

            <EditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect"
                android:hint="@string/password"
                android:textSize="24sp"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/login_btn"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textSize="24sp"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/new_user"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_new"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</FrameLayout>